<resources>
    <string name="app_name">IJournall</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="preference_file_key">SessionManager</string>

    <!--login and register strings-->
    <string name="username_label">Username</string>
    <string name="passcode_label">Passcode</string>
    <string name="loginbtn_txt">LOGIN</string>
    <string name="registerbtn_txt">REGISTER</string>
    <string name="dateformat">DD-MM-YYYY</string>
    <string name="calendar_description">Calendar</string>
    <string name="logo_description">LOGO</string>
    <string name="field">loginu</string>
    <string name="dob_label">DOB</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_diary">Diary</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="login_tab_text">LOGIN</string>
    <string name="register_tab_text">REGISTER</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diary_title_hint">Title</string>
    <string name="diary_content_hint">Write Here..</string>
    <string name="diary_image_with_title_hint">Write More Here..</string>
    <string name="rating_content_description">Select Rating</string>
    <string name="search_icon_title">Search</string>
    <string name="prev_date_button">previous date button</string>
    <string name="next_date_button">next date button</string>
    <string name="page_album_pic">page album pic</string>
    <string name="save_btn">SAVE</string>
    <string name="search_hint">Search Diary</string>

</resources>
