<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@id/navigation_diary">

    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.hk.ijournal.dayentry.views.DayEntryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_day_entry">

        <argument
            android:name="diaryUser"
            app:argType="com.hk.ijournal.repository.data.source.local.entities.User" />

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hk.ijournal.views.home.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hk.ijournal.views.home.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>