<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="DiaryViewModel"
            type="com.hk.ijournal.viewmodels.DiaryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.diary.DiaryFragment">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/homeguideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/albumguideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <ImageButton
            android:id="@+id/smiley_rating_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ic_baseline_insert_emoticon_24"
            android:contentDescription="@string/rating_content_description"
            app:layout_constraintBottom_toTopOf="@id/homeguideline"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/diaryContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:autofillHints="@string/diary_content_hint"
            android:background="@drawable/content_input_style"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/diary_content_hint"
            android:inputType="textMultiLine"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/albumguideline" />

        <TextView
            android:id="@+id/selectedDate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/dateformat"
            android:text="@{DiaryViewModel.selectedDateLive.toString()}"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/smiley_rating_button"
            app:layout_constraintEnd_toStartOf="@+id/nextDateButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/prevDateButton"
            app:layout_constraintTop_toTopOf="@+id/smiley_rating_button" />

        <ImageButton
            android:id="@+id/prevDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_baseline_arrow_left_24"
            android:contentDescription="@string/prev_date_button"
            app:layout_constraintBottom_toBottomOf="@+id/nextDateButton"
            app:layout_constraintEnd_toStartOf="@+id/selectedDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/nextDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_right_24"
            android:contentDescription="@string/next_date_button"
            app:layout_constraintBottom_toBottomOf="@+id/selectedDate"
            app:layout_constraintStart_toEndOf="@+id/selectedDate"
            app:layout_constraintTop_toTopOf="@+id/selectedDate" />

        <TextView
            android:id="@+id/saveStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@{DiaryViewModel.saveStatus}"
            app:layout_constraintBottom_toTopOf="@id/homeguideline"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/rating_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smiley_rating_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
