<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.hk.ijournal.repository.models.AccessModel.AccessValidation" />

        <variable
            name="AccessViewModel"
            type="com.hk.ijournal.viewmodels.AccessViewModel" />

        <variable
            name="AccessBindingAdapter"
            type="com.hk.ijournal.adapters.AccessBindingAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintVertical_weight="0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernamefieldwrap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/username_label"
            android:textAlignment="viewStart"
            android:textColorHint="@color/darkpink"
            app:hintTextAppearance="@style/MyHintStyle"
            app:errorMsg='@{AccessViewModel.loginUserValidation.equals(AccessValidation.USERNAME_INVALID)?"Invalid Username":""}'
            app:errorTextColor="@color/red"
            app:focusState="@{AccessBindingAdapter.loginusernameFocusLiveData}"
            app:layout_constraintBottom_toTopOf="@+id/passcodewrap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={AccessViewModel.loginUsernameLive}"
                app:onFocusChange="@{AccessBindingAdapter.focusChangeListener}"
                android:ems="15"
                android:theme="@style/MyHintStyle"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passcodewrap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/passcode_label"
            android:textAlignment="viewStart"
            android:textColorHint="@color/darkpink"
            app:hintTextAppearance="@style/MyHintStyle"
            app:errorMsg='@{AccessViewModel.loginPasscodeValidation.equals(AccessValidation.PASSCODE_INVALID)?"Invalid Password":""}'
            app:errorTextColor="@color/red"
            app:focusState="@{AccessBindingAdapter.loginpasscodeFocusLiveData}"
            app:layout_constraintBottom_toTopOf="@+id/loginbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernamefieldwrap"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginpasscode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={AccessViewModel.loginPasscodeLive}"
                app:onFocusChange="@{AccessBindingAdapter.focusChangeListener}"
                android:ems="15"
                android:inputType="textPassword"
                android:theme="@style/MyHintStyle" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginbutton"
            style="@style/authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginbtn_txt"
            app:enableOnPassValid="@{AccessViewModel.loginPasscodeValidation}"
            app:enableOnUserValid="@{AccessViewModel.loginUserValidation}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passcodewrap" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>